--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.1",
     "mongoose": "^5.6.11",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1"
   },
